--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -38,7 +38,7 @@
         [(ngModel)]="modeBoolean"
         (checkedChange)="modeSwitched($event)"
         [labelPosition]="modeLabelPosition"
-        ><span class="initial-capitalize">{{ mode }}</span></nb-toggle
+        >{{ modeLabel }}</nb-toggle
       >
     </div>
   </div>
