--- a/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-edit/scenario-edit.component.html
@@ -1,4 +1,7 @@
-<nb-card class="side-panel">
+<nb-card
+  class="side-panel"
+  [nbSpinner]="loading"
+>
   <nb-card-header>
     <div class="d-flex justify-content-between align-items-start">
       <h2>{{ scenario?.id ? 'Edit "' + scenario.name + '"' : 'New scenario' }}</h2>
