Create intent modal

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
@@ -140,9 +140,9 @@
         size="tiny"
         status="info"
         *ngIf="mode != 'writing'"
-        (click)="manageIntent()"
+        (click)="searchIntent()"
       >
-        Manage intents
+        Manage intent
       </button>
     </div>
   </div>
