--- a/bot/admin/web/src/app/scenarios/scenario-designer/intents-search/intents-search.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intents-search/intents-search.component.html
@@ -1,8 +1,27 @@
-<nb-card>
-  <nb-card-header>{{ title }}</nb-card-header>
+<nb-card
+  id="modal-wrapper"
+  size="large"
+>
+  <nb-card-header class="d-flex justify-content-between align-items-start">
+    <h4>{{ title }}</h4>
+
+    <button
+      nbButton
+      ghost
+      shape="round"
+      nbTooltip="Cancel"
+      (click)="cancel()"
+    >
+      <nb-icon icon="close-outline"></nb-icon>
+    </button>
+  </nb-card-header>
 
   <nb-card-body [nbSpinner]="loading">
     <div *ngIf="!loading">
+      <p *ngIf="foundIntents?.length">
+        Here are the intents matching the given sentence "{{ intentSentence }}"
+      </p>
+
       <nb-card *ngFor="let intent of foundIntents">
         <nb-card-header>
           {{ intent.intentId }}
@@ -16,7 +35,7 @@
             <nb-icon icon="chevron-right-outline"></nb-icon>
           </button>
         </nb-card-header>
-        <nb-card-body>
+        <nb-card-body class="p-0">
           <nb-list>
             <nb-list-item *ngFor="let sentence of intent.sentences">
               {{ sentence }}
@@ -27,7 +46,7 @@
     </div>
   </nb-card-body>
 
-  <nb-card-footer class="text-right">
+  <nb-card-footer class="grid-button">
     <button
       nbButton
       size="small"
@@ -45,7 +64,7 @@
       (click)="createNewIntent()"
     >
       <nb-icon icon="plus-outline"></nb-icon>
-      Create new intent
+      Create a new intent
     </button>
   </nb-card-footer>
 </nb-card>
