--- a/bot/admin/web/src/app/scenarios/scenario-designer/intents-search/intents-search.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intents-search/intents-search.component.scss
@@ -1,3 +1,13 @@
 #modal-wrapper {
-  max-width: 50vh;
+  min-width: 70vh;
+}
+
+.grid-button {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 0.5rem;
+
+  button {
+    width: fit-content;
+  }
 }
