--- a/bot/admin/web/src/app/bot/story/media/media-dialog.component.html
+++ b/bot/admin/web/src/app/bot/story/media/media-dialog.component.html
@@ -124,8 +124,22 @@
             />
           </span>
         </p>
-
-        <hr />
+        <!--- Description -->
+        <span
+          *ngIf="media.file"
+          class="nb-form-field inline">
+            <label>File Description</label>
+            <input
+              nbInput
+              type="text"
+              name="description"
+              placeholder="Description"
+              [(ngModel)]="media.file.descriptionLabel"
+              class="width-50"
+              nbTooltip="File Description"
+            />
+          </span>
+        <hr/>
         <!-- actions -->
         <div class="actions">
           <h6>Actions</h6>
