--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
@@ -91,12 +91,17 @@
     </div>
 
     <textarea
+      *ngIf="!item.intentId"
       #itemTextarea
       fullWidth
       rows="4"
       placeholder="Question"
       [(ngModel)]="item.text"
     ></textarea>
+
+    <div *ngIf="item.intentId">
+      {{ item.intentId }}
+    </div>
 
     <div *ngIf="mode == 'writing' && item.from == 'bot' && itemHasNoChildren()">
       <nb-checkbox
@@ -139,7 +144,7 @@
         nbButton
         size="tiny"
         status="info"
-        *ngIf="mode != 'writing'"
+        *ngIf="mode != 'writing' && item.from == 'client' && item.text?.length"
         (click)="searchIntent()"
       >
         Manage intent
