--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.scss
@@ -41,7 +41,7 @@ $verification-color: #bebebe;
   padding: 0.5rem;
   margin: auto;
   width: 13rem;
-  min-height: 9.8rem;
+  // min-height: 9.8rem;
   position: relative;
   box-shadow: 0px 5px 5px -5px rgba($color: #000000, $alpha: 0.3);
   border-top-right-radius: 10px;
