--- a/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/intent-edit.component.scss
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intent-edit/intent-edit.component.scss
@@ -1,3 +1,29 @@
 #modal-wrapper {
   min-width: 50vh;
+
+  .questions {
+    overflow-y: auto;
+    max-height: 12rem;
+
+    UL {
+      padding: 0;
+      margin: 0;
+      list-style-type: none;
+      LI {
+        padding: 0.2rem;
+        border-bottom: 1px solid #bebebe;
+        font-style: italic;
+      }
+    }
+  }
+
+  .grid-button {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-gap: 0.5rem;
+
+    button {
+      width: fit-content;
+    }
+  }
 }
