--- a/bot/admin/web/src/app/scenarios/scenario-designer/intent-create/intent-create.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/intent-create/intent-create.component.html
@@ -1,13 +1,17 @@
 <nb-card id="modal-wrapper">
   <nb-card-header class="d-flex justify-content-between align-items-start">
-    <h4>Create a new intent</h4>
-
+    <div>
+      <h4>Create a new intent</h4>
+      There is no existing intention corresponding to the label "{{ intentSentence }}". Please
+      define one below.
+    </div>
     <button
       nbButton
       ghost
       shape="round"
       nbTooltip="Cancel"
       (click)="cancel()"
+      class="ml-3"
     >
       <nb-icon icon="close-outline"></nb-icon>
     </button>
@@ -55,7 +59,17 @@
           id="category"
           type="text"
           placeholder="Select category"
+          autocomplete="off"
+          [nbAutocomplete]="categoryAutocomplete"
         />
+        <nb-autocomplete #categoryAutocomplete>
+          <nb-option
+            *ngFor="let option of categoryAutocompleteValues | async"
+            [value]="option"
+          >
+            {{ option }}
+          </nb-option>
+        </nb-autocomplete>
       </div>
 
       <div class="d-flex flex-column mb-2">
