--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -1,3 +1,7 @@
+.text-muted {
+  color: #8f959b;
+}
+
 .valign-middle {
   vertical-align: middle;
 }
@@ -6,4 +10,10 @@
 }
 .initial-capitalize::first-letter {
   text-transform: uppercase;
+}
+
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
