Drag the canvas with a left click instead of a right click

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer.component.html
@@ -51,7 +51,7 @@
   (onMouseWheel)="mouseWheel($event)"
 >
   <div
-    class="canvas"
+    class="canvas cursor-move"
     #canvasElem
   >
     <div class="card-row">
