--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-designer-entry.component.html
@@ -31,7 +31,7 @@
     >
       <img
         src="assets/images/scenario-client.svg"
-        class="move"
+        class="cursor-move"
         dndHandle
         *ngIf="item.from == SCENARIO_ITEM_FROM_CLIENT"
       />
@@ -54,7 +54,7 @@
     >
       <img
         src="assets/images/scenario-bot.svg"
-        class="move"
+        class="cursor-move"
         dndHandle
         *ngIf="item.from == SCENARIO_ITEM_FROM_BOT"
       />
@@ -77,7 +77,7 @@
     >
       <img
         src="assets/images/scenario-verification.svg"
-        class="move"
+        class="cursor-move"
         dndHandle
         *ngIf="item.from == SCENARIO_ITEM_FROM_API"
       />
