--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -8,6 +8,12 @@
 .pointer {
   cursor: pointer;
 }
+.cursor-move {
+  cursor: move;
+}
+.cursor-default {
+  cursor: default;
+}
 .initial-capitalize::first-letter {
   text-transform: uppercase;
 }
