--- a/bot/admin/web/src/app/scenarios/scenario-designer/api-edit/api-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/api-edit/api-edit.component.html
@@ -50,10 +50,9 @@
           placeholder="Select api call response type"
           formControlName="responseType"
         >
+          <nb-option value="string">Text or Number</nb-option>
           <nb-option value="boolean">Boolean</nb-option>
-          <nb-option value="2">Text</nb-option>
-          <nb-option value="3">Number</nb-option>
-          <nb-option value="4">Response codes</nb-option>
+          <nb-option value="codes">Response codes</nb-option>
         </nb-select>
       </div>
     </form>
